--- a/react-frontend/src/index.scss
+++ b/react-frontend/src/index.scss
@@ -20,6 +20,12 @@ body {
   box-shadow: inset 0 -3px 0 0 rgba(33, 150, 243, 0.6)
 }
 
+.ReactTable .rt-tbody .rt-td {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .right {
   text-align: right;
 }
